multi-platform API